<package>
  <name>kybot_bringup</name>
  <version>0.0.1</version>

  <description>for kybot test</description>

  <maintainer email="1756681646@qq.com">rcwind</maintainer>
  <license>BSD</license>
  <author email="1756681646@qq.com">rcwind</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>rospy</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>

  </export>
</package>
